--- a/AntiCheatV3_DLL/AntiCheatV3_DLL.vcxproj
+++ b/AntiCheatV3_DLL/AntiCheatV3_DLL.vcxproj
@@ -113,6 +113,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <SupportJustMyCode>false</SupportJustMyCode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
